trunk/Archive2/08/037a5bbd3a6b55/output
main.cpp:14:11: error: 'Base' is a private member of 'Base'
    using Base::data;
          ^
main.cpp:8:17: note: constrained by private inheritance here
struct Middle : private Base
                ^~~~~~~~~~~~
main.cpp:3:8: note: member is declared here
struct Base
       ^
1 error generated.
